# aws-bedrock

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/: utils.py
src/building_bonds/: main.py
src/building_bonds/tools/: linkedin_profile_lookup_agent.py  linkedin_profile_scraping.py
src/ingredient_to_recipe/: main.py
src/resume_screening/: main.py
